fixes browse tree getting hidden behind footer in some cases

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -314,6 +314,7 @@ table{
 
 .col-md-3{
     min-width: 275px;
+    padding-bottom: 80px;
 }
 
 /* Clean up the print by hiding stuff */
